@@ -27,7 +27,7 @@ struct battleground_data;
 struct quest;
 #include <stdarg.h>
 // packet DB
-#define MAX_PACKET_DB		0x800
+#define MAX_PACKET_DB		0x80F
 #define MAX_PACKET_VER		25
 
 struct s_packet_db {
